# gitdrive

./: README.md  pyproject.toml
gitdrive/: cli.py  config.py  utils.py
