[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
name = "gitdrive"
version = "0.1.0"
author = "Cary Carter"
author_email = "ccarterdev@gmail.com"
description = "A tool to use git repos (presumbly GitHub) as a cloud storage service with encryption."

url = "https://github.com/cc-d/gitdrive"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

install_requires = [
    "requests",
]



[tool.isort]
profile = "black"
use_parentheses = true
line_length = 79

[tool.black]
line_length = 79
skip_string_normalization = true
skip_magic_trailing_comma = true
preview = true
target-version = ['py37']
